Fix valign

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ ul {
 }
 
 td {
+  vertical-align: top;
   text-align: center;
 }
 
